--- a/index.html
+++ b/index.html
@@ -41,18 +41,18 @@
 </head>
 <body>
     <main class="container" id="main-content">
-        <h1>Welcome To The Dutch Stake Pool</h1>
+        <h1>The Dutch Stake Pool</h1>
         <a href="about.html" rel="noopener noreferrer" aria-label="The Dutch Stake Pool - About">
         <img src="tdsp_logo.webp" alt="The Dutch Stake Pool Logo - Reliable Bare-Metal Low-Fee Stake Pool">
         </a>
-        <p>Dutch Bare-Metal, low-fee stake pool. The one-stop shop for staking $ADA and $IAG. If you're looking for a DRep, click on the ADA logo below.</p>
+        <p>The one-stop shop for staking/mining $ADA, $IAG and $STRCH.</p>
 
         <div class="links">
             <table>
                 <tr>
                     <td>
                         <a href="about.html" rel="noopener noreferrer" aria-label="The Dutch Stake Pool - About">
-                            <img src="tdsp_logo.webp" alt="The Dutch Stake Pool Logo - Reliable Bare-Metal Low-Fee Stake Pool">
+                            <img src="about_logo.webp" alt="The Dutch Stake Pool Logo - Reliable Bare-Metal Low-Fee Stake Pool">
                     </td>
                     <td>
                         <a href="poolstats.html" rel="noopener noreferrer" aria-label="The Dutch Stake Pool - Stats">
@@ -60,8 +60,18 @@
                         </a>
                     </td>
                     <td>
+                        <a href="strch.html" rel="noopener noreferrer" aria-label="Starch Miner Company Stats">
+                            <img src="starchCompanyLogo.webp" alt="Join TDSP Starch Company">
+                        </a>
+                    </td>
+                    <td>
                         <a href="https://tool.jamonbread.io/delegate/pool1ksye6zwlzaytspldngc3966aj79zkjvmkykydu2txay75c0krfp" target="_blank" rel="noopener noreferrer" aria-label="The Dutch Stake Pool - Join">
                             <img src="stakebutton_ico.webp" alt="Join The Dutch Stake Pool - Stake with us">
+                        </a>
+                    </td>
+                    <td>
+                        <a href="https://app.iagon.com/" target="_blank" rel="noopener noreferrer" aria-label="Stake to Iagon Node">
+                            <img src="iagonLogoLight.webp" alt="Join The Iagon Node">
                         </a>
                     </td>
                     <td>
@@ -72,16 +82,6 @@
                     <td>
                         <a href="https://gov.tools/connected/drep_directory/drep1u634jgjwly7gqd90tuhqrwayze2x0revzz657tael3kpq24uxpl" target="_blank" rel="noopener noreferrer" aria-label="DamionDutch Stake DRep ID">
                             <img src="govtools.webp" alt="View The Dutch Stake Pool's DRep ID">
-                        </a>
-                    </td>
-                    <td>
-                        <a href="https://app.iagon.com/" target="_blank" rel="noopener noreferrer" aria-label="Stake to Iagon Node">
-                            <img src="iagonLogoLight.webp" alt="Join The Iagon Node">
-                        </a>
-                    </td>
-                    <td>
-                        <a href="strch.html" rel="noopener noreferrer" aria-label="Starch Miner Company Stats">
-                            <img src="starchCompanyLogo.webp" alt="Join TDSP Starch Company">
                         </a>
                     </td>
                 </tr>
