--- a/strch.html
+++ b/strch.html
@@ -44,9 +44,12 @@ header("Content-Security-Policy:
             <table>
                 <tr>
                     <td>
-                        <a href="index.html" rel="noopener noreferrer" aria-label="Home">
-                            <img src="tdsp_logo.webp" alt="Home"></a>
-                        </a>
+                        <a href="index.html" rel="noopener noreferrer" aria-label="The Dutch Stake Pool - Home">
+                            <img src="tdsp_logo.webp" alt="The Dutch Stake Pool Logo - Reliable Bare-Metal Low-Fee Stake Pool">
+                    </td>
+                      <td>
+                        <a href="about.html" rel="noopener noreferrer" aria-label="The Dutch Stake Pool - About">
+                            <img src="about_logo.webp" alt="The Dutch Stake Pool Logo - Reliable Bare-Metal Low-Fee Stake Pool">
                     </td>
                     <td>
                         <a href="poolstats.html" rel="noopener noreferrer" aria-label="The Dutch Stake Pool - Stats">
@@ -59,6 +62,11 @@ header("Content-Security-Policy:
                         </a>
                     </td>
                     <td>
+                        <a href="https://app.iagon.com/" target="_blank" rel="noopener noreferrer" aria-label="Stake to Iagon Node">
+                            <img src="iagonLogoLight.webp" alt="Join The Iagon Node">
+                        </a>
+                    </td>
+                    <td>
                         <a href="https://twitter.com/DamionDutch" target="_blank" rel="noopener noreferrer" aria-label="Follow The Dutch Stake Pool on Twitter">
                             <img src="X-logo_ico.webp" alt="Follow The Dutch Stake Pool on Twitter">
                         </a>
@@ -66,11 +74,6 @@ header("Content-Security-Policy:
                     <td>
                         <a href="https://gov.tools/connected/drep_directory/drep1u634jgjwly7gqd90tuhqrwayze2x0revzz657tael3kpq24uxpl" target="_blank" rel="noopener noreferrer" aria-label="DamionDutch Stake DRep ID">
                             <img src="govtools.webp" alt="View The Dutch Stake Pool's DRep ID">
-                        </a>
-                    </td>
-                    <td>
-                        <a href="https://app.iagon.com/" target="_blank" rel="noopener noreferrer" aria-label="Stake to Iagon Node">
-                            <img src="iagonLogoLight.webp" alt="Join The Iagon Node">
                         </a>
                     </td>
                 </tr>
