--- a/about.html
+++ b/about.html
@@ -59,9 +59,8 @@
             <table>
                 <tr>
                     <td>
-                        <a href="index.html" rel="noopener noreferrer" aria-label="Home">
-                            <img src="tdsp_logo.webp" alt="Home"></a>
-                        </a>
+                        <a href="index.html" rel="noopener noreferrer" aria-label="The Dutch Stake Pool - Home">
+                            <img src="tdsp_logo.webp" alt="The Dutch Stake Pool Logo - Reliable Bare-Metal Low-Fee Stake Pool">
                     </td>
                     <td>
                         <a href="poolstats.html" rel="noopener noreferrer" aria-label="The Dutch Stake Pool - Stats">
@@ -69,8 +68,18 @@
                         </a>
                     </td>
                     <td>
+                        <a href="strch.html" rel="noopener noreferrer" aria-label="Starch Miner Company Stats">
+                            <img src="starchCompanyLogo.webp" alt="Join TDSP Starch Company">
+                        </a>
+                    </td>
+                    <td>
                         <a href="https://tool.jamonbread.io/delegate/pool1ksye6zwlzaytspldngc3966aj79zkjvmkykydu2txay75c0krfp" target="_blank" rel="noopener noreferrer" aria-label="The Dutch Stake Pool - Join">
                             <img src="stakebutton_ico.webp" alt="Join The Dutch Stake Pool - Stake with us">
+                        </a>
+                    </td>
+                    <td>
+                        <a href="https://app.iagon.com/" target="_blank" rel="noopener noreferrer" aria-label="Stake to Iagon Node">
+                            <img src="iagonLogoLight.webp" alt="Join The Iagon Node">
                         </a>
                     </td>
                     <td>
@@ -81,16 +90,6 @@
                     <td>
                         <a href="https://gov.tools/connected/drep_directory/drep1u634jgjwly7gqd90tuhqrwayze2x0revzz657tael3kpq24uxpl" target="_blank" rel="noopener noreferrer" aria-label="DamionDutch Stake DRep ID">
                             <img src="govtools.webp" alt="View The Dutch Stake Pool's DRep ID">
-                        </a>
-                    </td>
-                    <td>
-                        <a href="https://app.iagon.com/" target="_blank" rel="noopener noreferrer" aria-label="Stake to Iagon Node">
-                            <img src="iagonLogoLight.webp" alt="Join The Iagon Node">
-                        </a>
-                    </td>
-                    <td>
-                        <a href="strch.html" rel="noopener noreferrer" aria-label="Starch Miner Company Stats">
-                            <img src="starchCompanyLogo.webp" alt="Join TDSP Starch Company">
                         </a>
                     </td>
                 </tr>
