--- a/about.html
+++ b/about.html
@@ -60,36 +60,36 @@
                 <tr>
                     <td>
                         <a href="index.html" rel="noopener noreferrer" aria-label="The Dutch Stake Pool - Home">
-                            <img src="tdsp_logo.webp" alt="The Dutch Stake Pool Logo - Reliable Bare-Metal Low-Fee Stake Pool">
+                            <img src="tdsp_logo.webp" alt="The Dutch Stake Pool Logo - Reliable Bare-Metal Low-Fee Stake Pool" class="hover-effect">
                     </td>
                     <td>
-                        <a href="poolstats.html" rel="noopener noreferrer" aria-label="The Dutch Stake Pool - Stats">
+                        <a href="poolstats.html" rel="noopener noreferrer" aria-label="The Dutch Stake Pool - Stats" class="hover-effect">
                             <img src="stats_ico.webp" alt="The Dutch Stake Pool - Statistics">
                         </a>
                     </td>
                     <td>
-                        <a href="strch.html" rel="noopener noreferrer" aria-label="Starch Miner Company Stats">
+                        <a href="strch.html" rel="noopener noreferrer" aria-label="Starch Miner Company Stats" class="hover-effect">
                             <img src="starchCompanyLogo.webp" alt="Join TDSP Starch Company">
                         </a>
                     </td>
                     <td>
                         <a href="https://tool.jamonbread.io/delegate/pool1ksye6zwlzaytspldngc3966aj79zkjvmkykydu2txay75c0krfp" target="_blank" rel="noopener noreferrer" aria-label="The Dutch Stake Pool - Join">
-                            <img src="stakebutton_ico.webp" alt="Join The Dutch Stake Pool - Stake with us">
+                            <img src="stakebutton_ico.webp" alt="Join The Dutch Stake Pool - Stake with us" class="hover-effect">
                         </a>
                     </td>
                     <td>
                         <a href="https://app.iagon.com/" target="_blank" rel="noopener noreferrer" aria-label="Stake to Iagon Node">
-                            <img src="iagonLogoLight.webp" alt="Join The Iagon Node">
+                            <img src="iagonLogoLight.webp" alt="Join The Iagon Node" class="hover-effect">
                         </a>
                     </td>
                     <td>
                         <a href="https://twitter.com/DamionDutch" target="_blank" rel="noopener noreferrer" aria-label="Follow The Dutch Stake Pool on Twitter">
-                            <img src="X-logo_ico.webp" alt="Follow The Dutch Stake Pool on Twitter">
+                            <img src="X-logo_ico.webp" alt="Follow The Dutch Stake Pool on Twitter" class="hover-effect">
                         </a>
                     </td>
                     <td>
                         <a href="https://gov.tools/connected/drep_directory/drep1u634jgjwly7gqd90tuhqrwayze2x0revzz657tael3kpq24uxpl" target="_blank" rel="noopener noreferrer" aria-label="DamionDutch Stake DRep ID">
-                            <img src="govtools.webp" alt="View The Dutch Stake Pool's DRep ID">
+                            <img src="govtools.webp" alt="View The Dutch Stake Pool's DRep ID" class="hover-effect">
                         </a>
                     </td>
                 </tr>
