--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
             <table>
                 <tr>
                     <td>
-                        <a href="about.html" rel="noopener noreferrer" aria-label="The Dutch Stake Pool - About">
+                        <a href="about.html" rel="noopener noreferrer" aria-label="About The Dutch Stake Poolt">
                             <img src="about_logo.webp" alt="The Dutch Stake Pool Logo - Reliable Bare-Metal Low-Fee Stake Pool">
                     </td>
                     <td>
-                        <a href="poolstats.html" rel="noopener noreferrer" aria-label="The Dutch Stake Pool - Stats">
+                        <a href="poolstats.html" rel="noopener noreferrer" aria-label="Pool Stats">
                             <img src="stats_ico.webp" alt="The Dutch Stake Pool - Statistics" class="hover-effect">
                         </a>
                     </td>
@@ -64,7 +64,7 @@
                         </a>
                     </td>
                     <td>
-                        <a href="https://tool.jamonbread.io/delegate/pool1ksye6zwlzaytspldngc3966aj79zkjvmkykydu2txay75c0krfp" target="_blank" rel="noopener noreferrer" aria-label="The Dutch Stake Pool - Join">
+                        <a href="https://tool.jamonbread.io/delegate/pool1ksye6zwlzaytspldngc3966aj79zkjvmkykydu2txay75c0krfp" target="_blank" rel="noopener noreferrer" aria-label="Stake Now">
                             <img src="stakebutton_ico.webp" alt="Join The Dutch Stake Pool - Stake with us" class="hover-effect">
                         </a>
                     </td>
@@ -79,7 +79,7 @@
                         </a>
                     </td>
                     <td>
-                        <a href="https://gov.tools/connected/drep_directory/drep1u634jgjwly7gqd90tuhqrwayze2x0revzz657tael3kpq24uxpl" target="_blank" rel="noopener noreferrer" aria-label="DamionDutch Stake DRep ID">
+                        <a href="https://gov.tools/connected/drep_directory/drep1u634jgjwly7gqd90tuhqrwayze2x0revzz657tael3kpq24uxpl" target="_blank" rel="noopener noreferrer" aria-label="Delegate to DamionDutch">
                             <img src="govtools.webp" alt="View The Dutch Stake Pool's DRep ID" class="hover-effect">
                         </a>
                     </td>
