--- a/about.html
+++ b/about.html
@@ -63,17 +63,17 @@
                             <img src="tdsp_logo.webp" alt="The Dutch Stake Pool Logo - Reliable Bare-Metal Low-Fee Stake Pool" class="hover-effect">
                     </td>
                     <td>
-                        <a href="poolstats.html" rel="noopener noreferrer" aria-label="The Dutch Stake Pool - Stats" class="hover-effect">
-                            <img src="stats_ico.webp" alt="The Dutch Stake Pool - Statistics">
+                        <a href="poolstats.html" rel="noopener noreferrer" aria-label="Pool Stats">
+                            <img src="stats_ico.webp" alt="The Dutch Stake Pool - Statistics" class="hover-effect">
                         </a>
                     </td>
                     <td>
-                        <a href="strch.html" rel="noopener noreferrer" aria-label="Starch Miner Company Stats" class="hover-effect">
-                            <img src="starchCompanyLogo.webp" alt="Join TDSP Starch Company">
+                        <a href="strch.html" rel="noopener noreferrer" aria-label="Starch Miner Company Stats">
+                            <img src="starchCompanyLogo.webp" alt="Join TDSP Starch Company" class="hover-effect">
                         </a>
                     </td>
                     <td>
-                        <a href="https://tool.jamonbread.io/delegate/pool1ksye6zwlzaytspldngc3966aj79zkjvmkykydu2txay75c0krfp" target="_blank" rel="noopener noreferrer" aria-label="The Dutch Stake Pool - Join">
+                        <a href="https://tool.jamonbread.io/delegate/pool1ksye6zwlzaytspldngc3966aj79zkjvmkykydu2txay75c0krfp" target="_blank" rel="noopener noreferrer" aria-label="Stake Now">
                             <img src="stakebutton_ico.webp" alt="Join The Dutch Stake Pool - Stake with us" class="hover-effect">
                         </a>
                     </td>
@@ -88,7 +88,7 @@
                         </a>
                     </td>
                     <td>
-                        <a href="https://gov.tools/connected/drep_directory/drep1u634jgjwly7gqd90tuhqrwayze2x0revzz657tael3kpq24uxpl" target="_blank" rel="noopener noreferrer" aria-label="DamionDutch Stake DRep ID">
+                        <a href="https://gov.tools/connected/drep_directory/drep1u634jgjwly7gqd90tuhqrwayze2x0revzz657tael3kpq24uxpl" target="_blank" rel="noopener noreferrer" aria-label="Delegate to DamionDutch">
                             <img src="govtools.webp" alt="View The Dutch Stake Pool's DRep ID" class="hover-effect">
                         </a>
                     </td>
