--- a/test.html
+++ b/test.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cardano Asset Prices</title>
+    <title>Starch Token Price</title>
     <style>
         body { font-family: Arial, sans-serif; text-align: center; padding: 20px; }
         h1 { color: #333; }
@@ -13,15 +13,12 @@
 </head>
 <body>
 
-    <h1>Cardano Asset Prices</h1>
+    <h1>Starch Token (STRCH) Price</h1>
     <div class="price-container">
-        <div class="price-item" id="iag-price">Iagon (IAG) Price: Loading...</div>
-        <div class="price-item" id="ada-price">Cardano (ADA) Price: Loading...</div>
-        <div class="price-item" id="starch-ada">Starch Token Price (ADA): Loading...</div>
-        <div class="price-item" id="starch-usd">Starch Token Price (USD): Loading...</div>
+        <div class="price-item" id="starch-price">Loading...</div>
     </div>
 
-    <script src="test.js"></script>
+    <script src="script.js"></script>
 
 </body>
 </html>
