--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
 
         <section>
             <h2>Stake Pool Operator</h2>
-            <p>With 19 years of experience as an IT consultant, I have specialized as a DevOps engineer, focusing on building and maintaining robust IT infrastructures.
+            <p>With 20 years of experience as an IT consultant, I have specialized as a DevOps engineer, focusing on building and maintaining robust IT infrastructures.
 
                 In the blockchain space, I bring extensive experience, having successfully managed a mining farm with 22 GPUs dedicated to Ethereum mining. This hands-on expertise in resource management, hardware optimization, and blockchain technology positions me well for operating a stake pool.
                 
@@ -51,8 +51,9 @@
         <br><br>
         <section>
             <h2>Other Staking Options</h2>
-            <p>When Iagon activates parner staking you can stake your Iagon tokens to this pool with a 25/75 to 30/70 profit split.<br>
-            This pool will also run partner Chain Nodes.
+            <p>Starch Mining<br>
+            Iagon parner staking.<br>
+            Partner Chain Nodes when live.
             </p>
         </section>
         <div class="links">
