--- a/poolstats.html
+++ b/poolstats.html
@@ -1,14 +1,15 @@
-  <?php
+<?php
     $nonce = base64_encode(random_bytes(16)); // Generate a secure nonce for CSP
     header("Content-Security-Policy: 
       default-src 'self'; 
       script-src 'self' https://js.cexplorer.io 'nonce-$nonce'; 
       connect-src 'self' https://js.cexplorer.io; 
       img-src 'self' data: https://cexplorer.io https://js.cexplorer.io; 
-      style-src 'self' 'nonce-$nonce' https://js.cexplorer.io;
+      style-src 'self' 'nonce-$nonce' https://js.cexplorer.io https://fonts.googleapis.com; 
+      font-src 'self' https://fonts.gstatic.com;
       frame-src 'self'
     ");
-  ?>
+?>
 <!DOCTYPE html>
 <html lang="en">
 <head>
