--- a/about.html
+++ b/about.html
@@ -8,8 +8,14 @@
     <link rel="stylesheet" href="styles.css">
 
     <!-- Security Policy -->
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src 'self' https://*; script-src 'self'; style-src 'self'; connect-src https://api.coingecko.com; frame-src 'self'; form-action 'self'">
-
+    <meta http-equiv="Content-Security-Policy" content="
+    default-src 'self'; 
+    img-src 'self' https://*; 
+    script-src 'self'; 
+    style-src 'self' https://fonts.googleapis.com; 
+    font-src 'self' https://fonts.gstatic.com; 
+    frame-src 'self'; 
+    form-action 'self'">
 </head>
 <body>
     <main class="container">
