--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
     <link rel="icon" sizes="192x192" href="tdsp_logo_ico.webp">
     <link rel="apple-touch-icon" href="tdsp_logo_ico.webp">
     <link rel="manifest" href="manifest.json">
-
+    <link rel="preload" href="https://fonts.gstatic.com/s/somefont.woff2" as="font" type="font/woff2" crossorigin="anonymous">
     <title>The Dutch Stake Pool | Reliable Cardano Staking</title>
-    <link rel="icon" href="tdsp_logo_ico.webp" type="image/webp">
+    <link rel="icon" href="tdsp_logo_ico.png" type="image/webp">
 
     <!-- Preload Main Logo -->
     <link rel="preload" href="tdsp_logo.webp" as="image">
@@ -51,7 +51,7 @@
 <body>
     <main class="container" id="main-content">
         <h1>The Dutch Stake Pool</h1>
-        <img src="tdsp_logo.webp" alt="The Dutch Stake Pool Logo - Reliable Bare-Metal Low-Fee Stake Pool">
+        <img src="tdsp_logo.webp" alt="The Dutch Stake Pool Logo - Reliable Bare-Metal Low-Fee Stake Pool" loading="lazy">
         
             <p>The one-stop shop for staking/mining $ADA, $IAG and $STRCH.</p>
 
@@ -61,6 +61,7 @@
                     <td>
                         <a href="about.html" rel="noopener noreferrer" aria-label="About The Dutch Stake Poolt">
                             <img src="about_logo.webp" alt="The Dutch Stake Pool Logo - Reliable Bare-Metal Low-Fee Stake Pool">
+                        </a>
                     </td>
                     <td>
                         <a href="poolstats.html" rel="noopener noreferrer" aria-label="Pool Stats">
