--- a/strch.html
+++ b/strch.html
@@ -48,22 +48,22 @@ header("Content-Security-Policy:
                     <td><span id="team-balance-868C0C">Loading...</span></td>
                 </tr>
                 <tr>
-                    <td><b>Total Miners</b></td>
+                    <td><b>Miners</b></td>
                     <td><span id="total-miners-B0ADAD">Loading...</span></td>
                     <td><span id="total-miners-868C0C">Loading...</span></td>
                 </tr>
                 <tr>
-                    <td><b>Total Miner Balance</b></td>
+                    <td><b>Miner Balance</b></td>
                     <td><span id="total-miner-balance-B0ADAD">Loading...</span></td>
                     <td><span id="total-miner-balance-868C0C">Loading...</span></td>
                 </tr>
                 <tr>
-                    <td><b>Total Pending Blocks</b></td>
+                    <td><b>Pending Blocks</b></td>
                     <td><span id="total-pending-blocks-B0ADAD">Loading...</span></td>
                     <td><span id="total-pending-blocks-868C0C">Loading...</span></td>
                 </tr>
                 <tr>
-                    <td><b>Total Mined Blocks</b></td>
+                    <td><b>Mined Blocks</b></td>
                     <td><span id="total-mined-blocks-B0ADAD">Loading...</span></td>
                     <td><span id="total-mined-blocks-868C0C">Loading...</span></td>
                 </tr>
