--- a/strch.html
+++ b/strch.html
@@ -25,6 +25,7 @@ header("Content-Security-Policy:
     <main class="container">
         <h1>Starch Mining Stats</h1>
         <section>
+            <div class="table-container">
             <table >
                 <tr>
                     <td><b>Company</b></td>
@@ -67,6 +68,7 @@ header("Content-Security-Policy:
                     <td><span id="total-mined-blocks-868C0C">Loading...</span></td>
                 </tr>
             </table>
+            </div>
             <div class="refresh-time">Last Updated: <span id="last-updated">Never</span></div>
             <div>Source <a href="https://starch.one" target="_blank" rel="noopener noreferrer"
                     aria-label="Starch.one">http://starch.one</a></div>
