--- a/strch.html
+++ b/strch.html
@@ -25,48 +25,50 @@ header("Content-Security-Policy:
     <main class="container">
         <h1>Starch Mining Stats</h1>
         <section>
-            <table >
-                <tr>
-                    <td><b>Company</b></td>
-                    <td><b><span id="team-name-B0ADAD">Loading...</span></b></td>
-                    <td><b><span id="team-name-868C0C">Loading...</span></b></td>
-                </tr>
-                <tr>
-                    <td><b>Color ID</b></td>
-                    <td>B0ADAD</td>
-                    <td>868C0C</td>
-                </tr>
-                <tr>
-                    <td><b>Fee(%)</b></td>
-                    <td>0</td>
-                    <td>2</td>
-                </tr>
-                <tr>
-                    <td><b>Account Balance</b></td>
-                    <td><span id="team-balance-B0ADAD">Loading...</span></td>
-                    <td><span id="team-balance-868C0C">Loading...</span></td>
-                </tr>
-                <tr>
-                    <td><b>Miners</b></td>
-                    <td><span id="total-miners-B0ADAD">Loading...</span></td>
-                    <td><span id="total-miners-868C0C">Loading...</span></td>
-                </tr>
-                <tr>
-                    <td><b>Miner Balance</b></td>
-                    <td><span id="total-miner-balance-B0ADAD">Loading...</span></td>
-                    <td><span id="total-miner-balance-868C0C">Loading...</span></td>
-                </tr>
-                <tr>
-                    <td><b>Pending Blocks</b></td>
-                    <td><span id="total-pending-blocks-B0ADAD">Loading...</span></td>
-                    <td><span id="total-pending-blocks-868C0C">Loading...</span></td>
-                </tr>
-                <tr>
-                    <td><b>Mined Blocks</b></td>
-                    <td><span id="total-mined-blocks-B0ADAD">Loading...</span></td>
-                    <td><span id="total-mined-blocks-868C0C">Loading...</span></td>
-                </tr>
-            </table>
+            <div class="table-container">
+                <table>
+                    <tr>
+                        <td><b>Company</b></td>
+                        <td><b><span id="team-name-B0ADAD">Loading...</span></b></td>
+                        <td><b><span id="team-name-868C0C">Loading...</span></b></td>
+                    </tr>
+                    <tr>
+                        <td><b>Color ID</b></td>
+                        <td>B0ADAD</td>
+                        <td>868C0C</td>
+                    </tr>
+                    <tr>
+                        <td><b>Fee(%)</b></td>
+                        <td>0</td>
+                        <td>2</td>
+                    </tr>
+                    <tr>
+                        <td><b>Account Balance</b></td>
+                        <td><span id="team-balance-B0ADAD">Loading...</span></td>
+                        <td><span id="team-balance-868C0C">Loading...</span></td>
+                    </tr>
+                    <tr>
+                        <td><b>Miners</b></td>
+                        <td><span id="total-miners-B0ADAD">Loading...</span></td>
+                        <td><span id="total-miners-868C0C">Loading...</span></td>
+                    </tr>
+                    <tr>
+                        <td><b>Miner Balance</b></td>
+                        <td><span id="total-miner-balance-B0ADAD">Loading...</span></td>
+                        <td><span id="total-miner-balance-868C0C">Loading...</span></td>
+                    </tr>
+                    <tr>
+                        <td><b>Pending Blocks</b></td>
+                        <td><span id="total-pending-blocks-B0ADAD">Loading...</span></td>
+                        <td><span id="total-pending-blocks-868C0C">Loading...</span></td>
+                    </tr>
+                    <tr>
+                        <td><b>Mined Blocks</b></td>
+                        <td><span id="total-mined-blocks-B0ADAD">Loading...</span></td>
+                        <td><span id="total-mined-blocks-868C0C">Loading...</span></td>
+                    </tr>
+                </table>
+            </div>
             <div class="refresh-time">Last Updated: <span id="last-updated">Never</span></div>
             <div>Source <a href="https://starch.one" target="_blank" rel="noopener noreferrer"
                     aria-label="Starch.one">http://starch.one</a></div>
