--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <link rel="preload" href="tdsp_logo.webp" as="image">
     <link rel="stylesheet" href="styles.css">
 
-    <script src="scripts.js" defer></script>
+    <script src="index.js" defer></script>
 </head>
 <body>
     <main class="container" id="main-content">
