--- a/strch.html
+++ b/strch.html
@@ -23,7 +23,7 @@ header("Content-Security-Policy:
 
 <body>
     <main class="container">
-        <h1>Starch Mining Stats</h1>
+        <h1>Starch Stats</h1>
         <section>
             <div class="table-container">
                 <table>
