--- a/poolstats.html
+++ b/poolstats.html
@@ -32,7 +32,7 @@
       </table>
      
     </section>
-    <script src="script.js" nonce="<?php echo $nonce; ?>"></script>
+    <script src="poolstats.js" nonce="<?php echo $nonce; ?>"></script>
     <div class="links">
       <table>
           <tr>
