--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <p><strong>ADA:</strong> <span id="ada-price">Loading...</span> <strong>IAG:</strong> <span id="iag-price">Loading...</span>
             </p>
         </div>
-        <footer">
+        <footer>
             &copy; 2025 The Dutch Stake Pool. All rights reserved.
         </footer>
     </main>
