--- a/poolstats.html
+++ b/poolstats.html
@@ -72,7 +72,7 @@
           </tr>
       </table>
   </div>
-  <footer">
+  <footer>
       &copy; 2025 The Dutch Stake Pool. All rights reserved.
   </footer>
 </main>
