--- a/about.html
+++ b/about.html
@@ -102,7 +102,7 @@
                 </tr>
             </table>
         </div>
-        <footer">
+        <footer>
             &copy; 2025 The Dutch Stake Pool. All rights reserved.
         </footer>
     </main>
