add Miner stats pages

--- a/strch.html
+++ b/strch.html
@@ -49,8 +49,8 @@ header("Content-Security-Policy:
                     </tr>
                     <tr>
                         <td><b>Miners</b></td>
-                        <td><span id="total-miners-B0ADAD">Loading...</span></td>
-                        <td><span id="total-miners-868C0C">Loading...</span></td>
+                        <td><a href="miners_b0adad.html" rel="noopener noreferrer" aria-label="Miners TDSP01"><span id="total-miners-B0ADAD">Loading...</span></a></td>
+                        <td><a href="miners_868c0c.html" rel="noopener noreferrer" aria-label="Miners TDSP02"><span id="total-miners-868C0C">Loading...</span></a></td>
                     </tr>
                     <tr>
                         <td><b>Miner Balance</b></td>
