--- a/miners_868c0c.html
+++ b/miners_868c0c.html
@@ -24,7 +24,7 @@ header("Content-Security-Policy:
 <body>
     <main class="container">
         <h1><a href="miners_b0adad.html" rel="noopener noreferrer" aria-label="Miners TDSP01"><</a> TDSP02 Miner stats</h1>
-
+        <div class="table-container">
         <table id="minersTable">
             <thead>
                 <tr>
@@ -38,7 +38,7 @@ header("Content-Security-Policy:
                 <!-- Miner data will be inserted here -->
             </tbody>
         </table>
-
+        </div>
 
     <div class="links">
         <table>
