--- a/miners_b0adad.html
+++ b/miners_b0adad.html
@@ -24,7 +24,7 @@ header("Content-Security-Policy:
 <body>
     <main class="container">
         <h1>TDSP01 Miner stats <a href="miners_868c0c.html" rel="noopener noreferrer" aria-label="Miners TDSP01">></a></h1>
-
+        <div class="table-container">
         <table id="minersTable">
             <thead>
                 <tr>
@@ -38,7 +38,7 @@ header("Content-Security-Policy:
                 <!-- Miner data will be inserted here -->
             </tbody>
         </table>
-
+        </div>
     </body>
     </html>
 
