--- a/miners_b0adad.html
+++ b/miners_b0adad.html
@@ -28,10 +28,10 @@ header("Content-Security-Policy:
         <table id="minersTable">
             <thead>
                 <tr>
-                    <th>Miner ID</th>
-                    <th>Weekly Rank</th>
-                    <th>Mined Blocks</th>
-                    <th>Balance $STRCH</th>
+                    <th>Miner</th>
+                    <th>Rank</th>
+                    <th>Blocks</th>
+                    <th>$STRCH</th>
                 </tr>
             </thead>
             <tbody>
