--- a/miners_868c0c.html
+++ b/miners_868c0c.html
@@ -39,7 +39,10 @@ header("Content-Security-Policy:
             </tbody>
         </table>
         </div>
-
+        <div class="refresh-time">Last Updated: <span id="last-updated">Never</span></div>
+        <div>Source <a href="https://starch.one" target="_blank" rel="noopener noreferrer"
+                aria-label="Starch.one">http://starch.one</a></div>
+        <br>
     <div class="links">
         <table>
             <tr>
