--- a/miners_b0adad.html
+++ b/miners_b0adad.html
@@ -20,8 +20,9 @@ header("Content-Security-Policy:
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/webp" sizes="192x192" href="tdsp_logo_ico.webp">
 </head>
-
 <body>
+    <script src="miners_b0adad.js" nonce="<?php echo $nonce; ?>" defer></script>
+    <script src="chart.js"></script>
     <main class="container">
         <h1>TDSP01 Miner stats <a href="miners_868c0c.html" rel="noopener noreferrer" aria-label="Miners TDSP01">></a></h1>
         <div class="table-container">
@@ -38,12 +39,12 @@ header("Content-Security-Policy:
                 <!-- Miner data will be inserted here -->
             </tbody>
         </table>
+        <canvas id="minerChart"></canvas>
         </div>
         <div class="refresh-time">Last Updated: <span id="last-updated">Never</span></div>
         <div>Source <a href="https://starch.one" target="_blank" rel="noopener noreferrer"
                 aria-label="Starch.one">http://starch.one</a></div>
         <br>
-
     <div class="links">
         <table>
             <tr>
@@ -100,8 +101,6 @@ header("Content-Security-Policy:
     <footer>
         &copy; 2025 The Dutch Stake Pool. All rights reserved.
     </footer>
-    <script src="miners_b0adad.js" nonce="<?php echo $nonce; ?>" defer></script>
 </main>
 </body>
-
 </html>
