--- a/test.html
+++ b/test.html
@@ -16,122 +16,95 @@ header("Content-Security-Policy:
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Dutch Stake Pool | Starch Mining Stats</title>
+    <title>The Dutch Stake Pool | Starch Mining Stats TDSP 01</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/webp" sizes="192x192" href="tdsp_logo_ico.webp">
 </head>
 
 <body>
+    <script src="miners_b0adad.js" nonce="<?php echo $nonce; ?>" defer></script>
+    <script src="chart.js"></script>
     <main class="container">
-        <h1>Starch Stats</h1>
-        <section>
-            <div class="table-container">
-                <table>
-                    <tr>
-                        <td><b>Company</b></td>
-                        <td><b><span id="team-name-B0ADAD">Loading...</span></b></td>
-                        <td><b><span id="team-name-868C0C">Loading...</span></b></td>
-                    </tr>
-                    <tr>
-                        <td><b>Color ID</b></td>
-                        <td>B0ADAD</td>
-                        <td>868C0C</td>
-                    </tr>
-                    <tr>
-                        <td><b>Fee(%)</b></td>
-                        <td>0</td>
-                        <td>2</td>
-                    </tr>
-                    <tr>
-                        <td><b>Account Balance</b></td>
-                        <td><span id="team-balance-B0ADAD">Loading...</span></td>
-                        <td><span id="team-balance-868C0C">Loading...</span></td>
-                    </tr>
-                    <tr>
-                        <td><b>Miners</b></td>
-                        <td><span id="total-miners-B0ADAD">Loading...</span></td>
-                        <td><span id="total-miners-868C0C">Loading...</span></td>
-                    </tr>
-                    <tr>
-                        <td><b>Online Miners</b></td>
-                        <td><span id="total-online-miners-B0ADAD">Loading...</span></td>
-                        <td><span id="total-online-miners-868C0C">Loading...</span></td>
-                    </tr>                    
-                    <tr>
-                        <td><b>Miner Balance</b></td>
-                        <td><span id="total-miner-balance-B0ADAD">Loading...</span></td>
-                        <td><span id="total-miner-balance-868C0C">Loading...</span></td>
-                    </tr>
-                    <tr>
-                        <td><b>Pending Blocks</b></td>
-                        <td><span id="total-pending-blocks-B0ADAD">Loading...</span></td>
-                        <td><span id="total-pending-blocks-868C0C">Loading...</span></td>
-                    </tr>
-                    <tr>
-                        <td><b>Mined Blocks</b></td>
-                        <td><span id="total-mined-blocks-B0ADAD">Loading...</span></td>
-                        <td><span id="total-mined-blocks-868C0C">Loading...</span></td>
-                    </tr>
-                </table>
-            </div>
-            <div class="refresh-time">Last Updated: <span id="last-updated">Never</span></div>
-            <div>Source <a href="https://starch.one" target="_blank" rel="noopener noreferrer"
-                    aria-label="Starch.one">http://starch.one</a></div>
-            <br>
-        </section>
-        <div class="links">
-            <table>
+        <h1>TDSP01 Miner stats <a href="miners_868c0c.html" rel="noopener noreferrer" aria-label="Miners TDSP01">></a></h1>
+        <div class="table-container">
+        <table id="minersTable">
+            <thead>
                 <tr>
-                    <td>
-                        <a href="index.html" rel="noopener noreferrer" aria-label="The Dutch Stake Pool - Home">
-                            <img src="tdsp_logo.webp"
-                                alt="The Dutch Stake Pool Logo - Reliable Bare-Metal Low-Fee Stake Pool"
-                                class="hover-effect">
-                    </td>
-                    <td>
-                        <a href="about.html" rel="noopener noreferrer" aria-label="About The Dutch Stake Pool">
-                            <img src="about_logo.webp"
-                                alt="The Dutch Stake Pool Logo - Reliable Bare-Metal Low-Fee Stake Pool">
-                    </td>
-                    <td>
-                        <a href="poolstats.html" rel="noopener noreferrer" aria-label="Pool Stats">
-                            <img src="stats_ico.webp" alt="The Dutch Stake Pool - Statistics" class="hover-effect">
-                        </a>
-                    </td>
-                    <td>
-                        <a href="https://tool.jamonbread.io/delegate/pool1ksye6zwlzaytspldngc3966aj79zkjvmkykydu2txay75c0krfp"
-                            target="_blank" rel="noopener noreferrer" aria-label="Stake Now">
-                            <img src="stakebutton_ico.webp" alt="Join The Dutch Stake Pool - Stake with us"
-                                class="hover-effect">
-                        </a>
-                    </td>
-                    <td>
-                        <a href="https://app.iagon.com/" target="_blank" rel="noopener noreferrer"
-                            aria-label="Stake to Iagon Node">
-                            <img src="iagonLogoLight.webp" alt="Join The Iagon Node" class="hover-effect">
-                        </a>
-                    </td>
-                    <td>
-                        <a href="https://twitter.com/DamionDutch" target="_blank" rel="noopener noreferrer"
-                            aria-label="Follow The Dutch Stake Pool on Twitter">
-                            <img src="X-logo_ico.webp" alt="Follow The Dutch Stake Pool on Twitter"
-                                class="hover-effect">
-                        </a>
-                    </td>
-                    <td>
-                        <a href="https://gov.tools/connected/drep_directory/drep1u634jgjwly7gqd90tuhqrwayze2x0revzz657tael3kpq24uxpl"
-                            target="_blank" rel="noopener noreferrer" aria-label="Delegate to DamionDutch">
-                            <img src="govtools.webp" alt="View The Dutch Stake Pool's DRep ID" class="hover-effect">
-                        </a>
-                    </td>
+                    <th>Miner</th>
+                    <th>Rank</th>
+                    <th>Blocks</th>
+                    <th>$STRCH</th>
                 </tr>
-            </table>
+            </thead>
+            <tbody>
+                <!-- Miner data will be inserted here -->
+            </tbody>
+        </table>
+        <canvas id="minerChart"></canvas>
         </div>
-        <footer>
-            &copy; 2025 The Dutch Stake Pool. All rights reserved.
-        </footer>
-        <script src="strch.js" nonce="<?php echo $nonce; ?>" defer></script>
-    </main>
+        <canvas id="minerChart"></canvas>
+        <div class="refresh-time">Last Updated: <span id="last-updated">Never</span></div>
+        <div>Source <a href="https://starch.one" target="_blank" rel="noopener noreferrer"
+                aria-label="Starch.one">http://starch.one</a></div>
+        <br>
+
+    <div class="links">
+        <table>
+            <tr>
+                <td>
+                    <a href="index.html" rel="noopener noreferrer" aria-label="The Dutch Stake Pool - Home">
+                        <img src="tdsp_logo.webp"
+                            alt="The Dutch Stake Pool Logo - Reliable Bare-Metal Low-Fee Stake Pool"
+                            class="hover-effect">
+                </td>
+                <td>
+                    <a href="about.html" rel="noopener noreferrer" aria-label="About The Dutch Stake Pool">
+                        <img src="about_logo.webp"
+                            alt="The Dutch Stake Pool Logo - Reliable Bare-Metal Low-Fee Stake Pool">
+                </td>
+                <td>
+                    <a href="poolstats.html" rel="noopener noreferrer" aria-label="Pool Stats">
+                        <img src="stats_ico.webp" alt="The Dutch Stake Pool - Statistics" class="hover-effect">
+                    </a>
+                </td>
+                <td>
+                    <a href="strch.html" rel="noopener noreferrer" aria-label="Starch Miner Company Stats">
+                        <img src="starchCompanyLogo.webp" alt="Join TDSP Starch Company" class="hover-effect">
+                    </a>
+                </td>
+                <td>
+                    <a href="https://tool.jamonbread.io/delegate/pool1ksye6zwlzaytspldngc3966aj79zkjvmkykydu2txay75c0krfp"
+                        target="_blank" rel="noopener noreferrer" aria-label="Stake Now">
+                        <img src="stakebutton_ico.webp" alt="Join The Dutch Stake Pool - Stake with us"
+                            class="hover-effect">
+                    </a>
+                </td>
+                <td>
+                    <a href="https://app.iagon.com/" target="_blank" rel="noopener noreferrer"
+                        aria-label="Stake to Iagon Node">
+                        <img src="iagonLogoLight.webp" alt="Join The Iagon Node" class="hover-effect">
+                    </a>
+                </td>
+                <td>
+                    <a href="https://twitter.com/DamionDutch" target="_blank" rel="noopener noreferrer"
+                        aria-label="Follow The Dutch Stake Pool on Twitter">
+                        <img src="X-logo_ico.webp" alt="Follow The Dutch Stake Pool on Twitter"
+                            class="hover-effect">
+                    </a>
+                </td>
+                <td>
+                    <a href="https://gov.tools/connected/drep_directory/drep1u634jgjwly7gqd90tuhqrwayze2x0revzz657tael3kpq24uxpl"
+                        target="_blank" rel="noopener noreferrer" aria-label="Delegate to DamionDutch">
+                        <img src="govtools.webp" alt="View The Dutch Stake Pool's DRep ID" class="hover-effect">
+                    </a>
+                </td>
+            </tr>
+        </table>
+    </div>
+    <footer>
+        &copy; 2025 The Dutch Stake Pool. All rights reserved.
+    </footer>
+</main>
 </body>
 
 </html>
