--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <body>
     <main class="container" id="main-content">
         <h1>The Dutch Stake Pool</h1>
-        <img src="tdsp_logo.webp" alt="The Dutch Stake Pool Logo - Reliable Bare-Metal Low-Fee Stake Pool" loading="lazy">
+        <img src="tdsp_logo.webp" alt="The Dutch Stake Pool Logo - Reliable Bare-Metal Low-Fee Stake Pool">
         
             <p>The one-stop shop for staking/mining $ADA, $IAG and $STRCH.</p>
 
