--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@ header("Content-Security-Policy:
 </head>
 <body>
     <main class="container">
-        <h1>About The Dutch Stake Pool</h1>
+        <h1>About</h1>
 
         <section>
             <h2>Stake Pool Operator</h2>
