--- a/strch.html
+++ b/strch.html
@@ -43,7 +43,7 @@ header("Content-Security-Policy:
                         <td>2</td>
                     </tr>
                     <tr>
-                        <td><b>Account Balance</b></td>
+                        <td><b>Balance($STRCH)</b></td>
                         <td><span id="team-balance-B0ADAD">Loading...</span></td>
                         <td><span id="team-balance-868C0C">Loading...</span></td>
                     </tr>
@@ -53,7 +53,7 @@ header("Content-Security-Policy:
                         <td><span id="total-miners-868C0C">Loading...</span></a></td>
                     </tr>
                     <tr>
-                        <td><b>Miner Balance</b></td>
+                        <td><b>Miner Balance($STRCH)</b></td>
                         <td><span id="total-miner-balance-B0ADAD">Loading...</span></td>
                         <td><span id="total-miner-balance-868C0C">Loading...</span></td>
                     </tr>
