--- a/miners_868c0c.html
+++ b/miners_868c0c.html
@@ -25,22 +25,26 @@ header("Content-Security-Policy:
     <script src="chart.js"></script>
     <main class="container">
         <h1><a href="miners_b0adad.html" rel="noopener noreferrer" aria-label="Miners TDSP01"><</a> TDSP02 Miner stats</h1>
+        <canvas id="minerChart"></canvas>
         <div class="table-container">
         <table id="minersTable">
             <thead>
                 <tr>
+                    <th>#</th>
                     <th>Miner</th>
                     <th>Rank</th>
                     <th>Blocks</th>
                     <th>$STRCH</th>
                 </tr>
             </thead>
-            <tbody>
-                <!-- Miner data will be inserted here -->
-            </tbody>
+            <tbody></tbody>
+            <tfoot>
+                <tr id="totalBalanceRow">
+                    <td colspan="4">⏳ Calculating total balance...</td>
+                </tr>
+            </tfoot>
         </table>
         </div>
-        <canvas id="minerChart"></canvas>
         <div class="refresh-time">Last Updated: <span id="last-updated">Never</span></div>
         <div>Source <a href="https://starch.one" target="_blank" rel="noopener noreferrer"
                 aria-label="Starch.one">http://starch.one</a></div>
