--- a/poolstats.html
+++ b/poolstats.html
@@ -30,7 +30,10 @@
           </tr>
         </th>
       </table>
-     
+      <div class="small-text">Source: <a href="https://cexplorer.io" target="_blank" rel="noopener noreferrer"
+        aria-label="Cexplorer">http://cexplorer.io</a></div>
+      <div class="small-text">Disclaimer <a href="https://cexplorer.io/disclaimer" target="_blank" rel="noopener noreferrer"
+              aria-label="https://cexplorer.io/disclaimer">https://cexplorer.io/disclaimer</a></div>
     </section>
     <script src="poolstats.js" nonce="<?php echo $nonce; ?>"></script>
     <div class="links">
