--- a/strch.html
+++ b/strch.html
@@ -29,8 +29,8 @@ header("Content-Security-Policy:
                 <table>
                     <tr>
                         <td><b>Company</b></td>
-                        <td><a href="miners_b0adad.html" rel="noopener noreferrer" aria-label="Miners TDSP01"><b><span id="team-name-B0ADAD">Loading...</span></b></a></td>
-                        <td><a href="miners_868c0c.html" rel="noopener noreferrer" aria-label="Miners TDSP02"><b><span id="team-name-868C0C">Loading...</span></b></a></td>
+                        <td><b><span id="team-name-B0ADAD">Loading...</span></b></td>
+                        <td><b><span id="team-name-868C0C">Loading...</span></b></td>
                     </tr>
                     <tr>
                         <td><b>Color ID</b></td>
@@ -50,6 +50,10 @@ header("Content-Security-Policy:
                     <tr>
                         <td><b>Total Company Balance</b></td>
                         <td><b><span id="total-teams-balance">Loading...</span></b></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td colspan="3"><hr style="margin: 0; padding: 0; border: none; border-top: 2px solid black;"></td>
                     </tr>
                     <tr>
                         <td></td>
@@ -57,8 +61,8 @@ header("Content-Security-Policy:
                     </tr>
                     <tr>
                         <td><b>Miners</b></td>
-                        <td><span id="total-miners-B0ADAD">Loading...</span></a></td>
-                        <td><span id="total-miners-868C0C">Loading...</span></a></td>
+                        <td><b><a href="miners_b0adad.html" rel="noopener noreferrer" aria-label="Miners TDSP01"><span id="total-miners-B0ADAD">Loading...</span></a></b></td>
+                        <td><b><a href="miners_868c0c.html" rel="noopener noreferrer" aria-label="Miners TDSP02"><span id="total-miners-868C0C">Loading...</span></a></b></td>
                     </tr>
                     <tr>
                         <td><b>Miner Balance($STRCH)</b></td>
@@ -77,8 +81,8 @@ header("Content-Security-Policy:
                     </tr>
                 </table>
             </div>
-            <div class="refresh-time">Last Updated: <span id="last-updated">Never</span></div>
-            <div>Source <a href="https://starch.one" target="_blank" rel="noopener noreferrer"
+            <div class="refresh-time small-text">Last Updated: <span id="last-updated">Never</span></div>
+            <div class="small-text">Source <a href="https://starch.one" target="_blank" rel="noopener noreferrer"
                     aria-label="Starch.one">http://starch.one</a></div>
             <br>
         </section>
