--- a/miners_b0adad.html
+++ b/miners_b0adad.html
@@ -33,8 +33,8 @@ header("Content-Security-Policy:
                 <tr>
                     <th>#</th>
                     <th>Miner</th>
-                    <th>Rank</th>
-                    <th>Blocks</th>
+                    <th>Rank(Weekly)</th>
+                    <th>Blocks(Total)</th>
                     <th>$STRCH</th>
                 </tr>
             </thead>
@@ -46,8 +46,8 @@ header("Content-Security-Policy:
             </tfoot>
         </table>
         </div>
-        <div class="refresh-time">Last Updated: <span id="last-updated">Never</span></div>
-        <div>Source <a href="https://starch.one" target="_blank" rel="noopener noreferrer"
+        <div class="refresh-time small-text">Last Updated: <span id="last-updated">Never</span></div>
+        <div class="small-text">Source <a href="https://starch.one" target="_blank" rel="noopener noreferrer"
                 aria-label="Starch.one">http://starch.one</a></div>
         <br>
     <div class="links">
