--- a/miners_b0adad.html
+++ b/miners_b0adad.html
@@ -34,7 +34,7 @@ header("Content-Security-Policy:
                     <th>#</th>
                     <th>Miner</th>
                     <th>Rank(Weekly)</th>
-                    <th>Blocks(Total)</th>
+                    <th>Blocks</th>
                     <th>$STRCH</th>
                 </tr>
             </thead>
