--- a/strch.html
+++ b/strch.html
@@ -48,14 +48,6 @@ header("Content-Security-Policy:
                         <td><span id="team-balance-868C0C">Loading...</span></td>
                     </tr>
                     <tr>
-                        <td><b>Total Company Balance</b></td>
-                        <td><b><span id="total-teams-balance">Loading...</span></b></td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td colspan="3"><hr style="margin: 0; padding: 0; border: none; border-top: 2px solid black;"></td>
-                    </tr>
-                    <tr>
                         <td></td>
                         <td></td>
                     </tr>
@@ -78,6 +70,19 @@ header("Content-Security-Policy:
                         <td><b>Mined Blocks</b></td>
                         <td><span id="total-mined-blocks-B0ADAD">Loading...</span></td>
                         <td><span id="total-mined-blocks-868C0C">Loading...</span></td>
+                    </tr>
+                    <tr>
+                        <td colspan="3"><hr style="margin: 0; padding: 0; border: none; border-top: 2px solid black;"></td>
+                    </tr>
+                    <tr>
+                        <td><b>Total Company Balance</b></td>
+                        <td><b><span id="total-teams-balance">Loading...</span></b></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td><b>Total Company Blocks</b></td>
+                        <td><b><span id="total-company-blocks">0</span></b></td>
+                        <td></td>
                     </tr>
                 </table>
             </div>
