--- a/miners_868c0c.html
+++ b/miners_868c0c.html
@@ -25,6 +25,7 @@ header("Content-Security-Policy:
     <script src="chart.js"></script>
     <main class="container">
         <h1><a href="miners_b0adad.html" rel="noopener noreferrer" aria-label="Miners TDSP01"><</a> TDSP02 Miner stats</h1>
+        <div id="totalBalanceRow"></div>
         <canvas id="minerChart"></canvas>
         <br>
         <div class="table-container">
@@ -40,9 +41,6 @@ header("Content-Security-Policy:
             </thead>
             <tbody></tbody>
             <tfoot>
-                <tr id="totalBalanceRow">
-                    <td colspan="4">⏳ Calculating total balance...</td>
-                </tr>
             </tfoot>
         </table>
         </div>
