--- a/miners_b0adad.html
+++ b/miners_b0adad.html
@@ -37,6 +37,7 @@ header("Content-Security-Policy:
                     <th>Rank(Weekly)</th>
                     <th>Blocks</th>
                     <th>$STRCH</th>
+                    <th>Miner Status</th>
                 </tr>
             </thead>
             <tbody></tbody>
