--- a/miners_b0adad.html
+++ b/miners_b0adad.html
@@ -24,7 +24,7 @@ header("Content-Security-Policy:
     <script src="miners_b0adad.js" nonce="<?php echo $nonce; ?>" defer></script>
     <script src="chart.js"></script>
     <main class="container">
-        <h1>TDSP01 Miner stats <a href="miners_868c0c.html" rel="noopener noreferrer" aria-label="Miners TDSP01">></a></h1>
+        <h1 id="teamName"></id></h1>
         <div id="totalBalanceRow"></div>
         <canvas id="minerChart"></canvas>
         <br>
