--- a/miners_b0adad.html
+++ b/miners_b0adad.html
@@ -30,7 +30,7 @@ header("Content-Security-Policy:
         <br>
         <label for="teamSelector">Select Team:</label>
         <select id="teamSelector"></select>
-        <input id="customTeamId" type="text">
+        <!-- <input id="customTeamId" type="text"> -->
         <button id="refreshButton">Refresh</button>
         <h1 id="teamName"></h1>
         <p id="teamBalance"></p>
