--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ header("Content-Security-Policy:
     <link rel="manifest" href="manifest.json">
 
     <title>The Dutch Stake Pool | Reliable Cardano Staking</title>
-    <link rel="icon" href="tdsp_logo_ico.png" type="image/webp">
+    <link rel="icon" href="tdsp_logo_ico.webp" type="image/webp">
 
     <!-- Preload Main Logo -->
     <link rel="preload" href="tdsp_logo.webp" as="image">
