--- a/strch.html
+++ b/strch.html
@@ -53,8 +53,8 @@ header("Content-Security-Policy:
                     </tr>
                     <tr>
                         <td><b>Miners</b></td>
-                        <td><b><a href="miners_b0adad.html" rel="noopener noreferrer" aria-label="Miners TDSP01"><span id="total-miners-B0ADAD">Loading...</span></a></b></td>
-                        <td><b><a href="miners_b0adad.html" rel="noopener noreferrer" aria-label="Miners TDSP02"><span id="total-miners-868C0C">Loading...</span></a></b></td>
+                        <td><b><a href="strch_miners.html" rel="noopener noreferrer" aria-label="Miners TDSP01"><span id="total-miners-B0ADAD">Loading...</span></a></b></td>
+                        <td><b><a href="strch_miners.html" rel="noopener noreferrer" aria-label="Miners TDSP02"><span id="total-miners-868C0C">Loading...</span></a></b></td>
                     </tr>
                     <tr>
                         <td><b>Miner Balance($STRCH)</b></td>
