--- a/strch.html
+++ b/strch.html
@@ -16,134 +16,98 @@ header("Content-Security-Policy:
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Dutch Stake Pool | Starch Mining Stats</title>
+    <title>The Dutch Stake Pool | Starch Mining Stats TDSP 01</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/webp" sizes="192x192" href="tdsp_logo_ico.webp">
 </head>
-
 <body>
+    <script src="strch.js" nonce="<?php echo $nonce; ?>" defer></script>
+    <script src="chart.js"></script>
     <main class="container">
-        <h1>Starch Stats</h1>
-        <section>
-            <div class="table-container">
-                <table>
-                    <tr>
-                        <td><b>Company</b></td>
-                        <td><b><span id="team-name-B0ADAD">Loading...</span></b></td>
-                        <td><b><span id="team-name-868C0C">Loading...</span></b></td>
-                    </tr>
-                    <tr>
-                        <td><b>Color ID</b></td>
-                        <td>B0ADAD</td>
-                        <td>868C0C</td>
-                    </tr>
-                    <tr>
-                        <td><b>Fee(%)</b></td>
-                        <td>0</td>
-                        <td>1</td>
-                    </tr>
-                    <tr>
-                        <td><b>Balance($STRCH)</b></td>
-                        <td><span id="team-balance-B0ADAD">Loading...</span></td>
-                        <td><span id="team-balance-868C0C">Loading...</span></td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td><b>Miners</b></td>
-                        <td><b><a href="strch_miners.html" rel="noopener noreferrer" aria-label="Miners TDSP01"><span id="total-miners-B0ADAD">Loading...</span></a></b></td>
-                        <td><b><a href="strch_miners.html" rel="noopener noreferrer" aria-label="Miners TDSP02"><span id="total-miners-868C0C">Loading...</span></a></b></td>
-                    </tr>
-                    <tr>
-                        <td><b>Miner Balance($STRCH)</b></td>
-                        <td><span id="total-miner-balance-B0ADAD">Loading...</span></td>
-                        <td><span id="total-miner-balance-868C0C">Loading...</span></td>
-                    </tr>
-                    <tr>
-                        <td><b>Pending Blocks</b></td>
-                        <td><span id="total-pending-blocks-B0ADAD">Loading...</span></td>
-                        <td><span id="total-pending-blocks-868C0C">Loading...</span></td>
-                    </tr>
-                    <tr>
-                        <td><b>Mined Blocks</b></td>
-                        <td><span id="total-mined-blocks-B0ADAD">Loading...</span></td>
-                        <td><span id="total-mined-blocks-868C0C">Loading...</span></td>
-                    </tr>
-                    <tr>
-                        <td colspan="3"><hr style="margin: 0; padding: 0; border: none; border-top: 2px solid black;"></td>
-                    </tr>
-                    <tr>
-                        <td><b>Total Company Balance</b></td>
-                        <td><b><span id="total-teams-balance">Loading...</span></b></td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td><b>Total Company Blocks</b></td>
-                        <td><b><span id="total-company-blocks">0</span></b></td>
-                        <td></td>
-                    </tr>
-                </table>
-            </div>
-            <div class="refresh-time small-text">Last Updated: <span id="last-updated">Never</span></div>
-            <div class="small-text">Source <a href="https://starch.one" target="_blank" rel="noopener noreferrer"
-                    aria-label="Starch.one">http://starch.one</a></div>
-            <br>
-        </section>
-        <div class="links">
-            <table>
+        <h1 id="teamName"></id></h1>
+        <div id="totalBalanceRow"></div>
+        <canvas id="minerChart"></canvas>
+        <br>
+        <label for="teamSelector">Select Team:</label>
+        <select id="teamSelector"></select>
+        <!-- <input id="customTeamId" type="text"> -->
+        <button id="refreshButton">Refresh</button>
+        <h1 id="teamName"></h1>
+        <p id="teamBalance"></p>
+        <div class="table-container">
+        <table id="minersTable">
+            <thead>
                 <tr>
-                    <td>
-                        <a href="index.html" rel="noopener noreferrer" aria-label="The Dutch Stake Pool - Home">
-                            <img src="tdsp_logo.webp"
-                                alt="The Dutch Stake Pool Logo - Reliable Bare-Metal Low-Fee Stake Pool"
-                                class="hover-effect">
-                    </td>
-                    <td>
-                        <a href="about.html" rel="noopener noreferrer" aria-label="About The Dutch Stake Pool">
-                            <img src="about_logo.webp"
-                                alt="The Dutch Stake Pool Logo - Reliable Bare-Metal Low-Fee Stake Pool">
-                    </td>
-                    <td>
-                        <a href="poolstats.html" rel="noopener noreferrer" aria-label="Pool Stats">
-                            <img src="stats_ico.webp" alt="The Dutch Stake Pool - Statistics" class="hover-effect">
-                        </a>
-                    </td>
-                    <td>
-                        <a href="https://tool.jamonbread.io/delegate/pool1ksye6zwlzaytspldngc3966aj79zkjvmkykydu2txay75c0krfp"
-                            target="_blank" rel="noopener noreferrer" aria-label="Stake Now">
-                            <img src="stakebutton_ico.webp" alt="Join The Dutch Stake Pool - Stake with us"
-                                class="hover-effect">
-                        </a>
-                    </td>
-                    <td>
-                        <a href="https://app.iagon.com/" target="_blank" rel="noopener noreferrer"
-                            aria-label="Stake to Iagon Node">
-                            <img src="iagonLogoLight.webp" alt="Join The Iagon Node" class="hover-effect">
-                        </a>
-                    </td>
-                    <td>
-                        <a href="https://twitter.com/DamionDutch" target="_blank" rel="noopener noreferrer"
-                            aria-label="Follow The Dutch Stake Pool on Twitter">
-                            <img src="X-logo_ico.webp" alt="Follow The Dutch Stake Pool on Twitter"
-                                class="hover-effect">
-                        </a>
-                    </td>
-                    <td>
-                        <a href="https://gov.tools/connected/drep_directory/drep1u634jgjwly7gqd90tuhqrwayze2x0revzz657tael3kpq24uxpl"
-                            target="_blank" rel="noopener noreferrer" aria-label="Delegate to DamionDutch">
-                            <img src="govtools.webp" alt="View The Dutch Stake Pool's DRep ID" class="hover-effect">
-                        </a>
-                    </td>
+                    <th>#</th>
+                    <th>Miner</th>
+                    <th>Rank(Weekly)</th>
+                    <th>Blocks</th>
+                    <th>$STRCH</th>
                 </tr>
-            </table>
+            </thead>
+            <tbody id="minerTableBody"></tbody>
+        </table>
         </div>
-        <footer>
-            &copy; 2025 The Dutch Stake Pool. All rights reserved.
-        </footer>
-        <script src="strch.js" nonce="<?php echo $nonce; ?>" defer></script>
-    </main>
+        <div class="refresh-time small-text">Last Updated: <span id="last-updated">Never</span></div>
+        <div class="small-text">Source <a href="https://starch.one" target="_blank" rel="noopener noreferrer"
+                aria-label="Starch.one">http://starch.one</a></div>
+        <br>
+    <div class="links">
+        <table>
+            <tr>
+                <td>
+                    <a href="index.html" rel="noopener noreferrer" aria-label="The Dutch Stake Pool - Home">
+                        <img src="tdsp_logo.webp"
+                            alt="The Dutch Stake Pool Logo - Reliable Bare-Metal Low-Fee Stake Pool"
+                            class="hover-effect">
+                </td>
+                <td>
+                    <a href="about.html" rel="noopener noreferrer" aria-label="About The Dutch Stake Pool">
+                        <img src="about_logo.webp"
+                            alt="The Dutch Stake Pool Logo - Reliable Bare-Metal Low-Fee Stake Pool">
+                </td>
+                <td>
+                    <a href="poolstats.html" rel="noopener noreferrer" aria-label="Pool Stats">
+                        <img src="stats_ico.webp" alt="The Dutch Stake Pool - Statistics" class="hover-effect">
+                    </a>
+                </td>
+                <td>
+                    <a href="strch.html" rel="noopener noreferrer" aria-label="Starch Miner Company Stats">
+                        <img src="starchCompanyLogo.webp" alt="Join TDSP Starch Company" class="hover-effect">
+                    </a>
+                </td>
+                <td>
+                    <a href="https://tool.jamonbread.io/delegate/pool1ksye6zwlzaytspldngc3966aj79zkjvmkykydu2txay75c0krfp"
+                        target="_blank" rel="noopener noreferrer" aria-label="Stake Now">
+                        <img src="stakebutton_ico.webp" alt="Join The Dutch Stake Pool - Stake with us"
+                            class="hover-effect">
+                    </a>
+                </td>
+                <td>
+                    <a href="https://app.iagon.com/" target="_blank" rel="noopener noreferrer"
+                        aria-label="Stake to Iagon Node">
+                        <img src="iagonLogoLight.webp" alt="Join The Iagon Node" class="hover-effect">
+                    </a>
+                </td>
+                <td>
+                    <a href="https://twitter.com/DamionDutch" target="_blank" rel="noopener noreferrer"
+                        aria-label="Follow The Dutch Stake Pool on Twitter">
+                        <img src="X-logo_ico.webp" alt="Follow The Dutch Stake Pool on Twitter"
+                            class="hover-effect">
+                    </a>
+                </td>
+                <td>
+                    <a href="https://gov.tools/connected/drep_directory/drep1u634jgjwly7gqd90tuhqrwayze2x0revzz657tael3kpq24uxpl"
+                        target="_blank" rel="noopener noreferrer" aria-label="Delegate to DamionDutch">
+                        <img src="govtools.webp" alt="View The Dutch Stake Pool's DRep ID" class="hover-effect">
+                    </a>
+                </td>
+            </tr>
+        </table>
+    </div>
+    <footer>
+        &copy; 2025 The Dutch Stake Pool. All rights reserved.
+    </footer>
+</main>
 </body>
-
 </html>
