--- a/strchold.html
+++ b/strchold.html
@@ -21,7 +21,7 @@ header("Content-Security-Policy:
     <link rel="icon" type="image/webp" sizes="192x192" href="tdsp_logo_ico.webp">
 </head>
 <body>
-    <script src="strchold.js" nonce="<?php echo $nonce; ?>" defer></script>
+    <script src="strch.js" nonce="<?php echo $nonce; ?>" defer></script>
     <script src="chart.js"></script>
     <main class="container">
         <h1 id="teamName"></id></h1>
