--- a/strch.html
+++ b/strch.html
@@ -40,7 +40,7 @@ header("Content-Security-Policy:
                 <tr>
                     <th>#</th>
                     <th>Miner</th>
-                    <th>Rank(Weekly)</th>
+                    <th>Rank</th>
                     <th>Blocks</th>
                     <th>$STRCH</th>
                 </tr>
